--- a/style.css
+++ b/style.css
@@ -5,5 +5,13 @@ h1{
 }
 p{
     color:rebeccapurple;
-background-color:aquamarine;
+background-color:rgb(136, 127, 255);
+} 
+
+img{
+    width:20%;
+    border-radius: 50%;
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
 }
